fixtures/frontend/milestone-1/invalid/val_depends_on_sig.aivi
sig tick = currentTime

val later = tick
